<resources>
    <string name="app_name">QualCar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="name_string">Name</string>
    <string name="permissions_string">Permissions</string>
    <string name="rules_string">Rules</string>
    <string name="switch_string_on">ON</string>
    <string name="switch_string_off">OFF</string>
    <string name="if_string">If</string>
    <string name="condition_string">condition1
        condition2
        condition3
        condition4
    </string>
    <string-array name="users_string">
        <item>Nitish</item>
        <item>Hanna</item>
        <item>Ryan</item>
        <item>Enrique</item>
        <item>Greg</item>
    </string-array>
    <string-array name="actions_string">
        <item>Lock Car</item>
        <item>Unlock Car</item>
        <item>Start Car</item>
        <item>Stop Car</item>
        <item>Roll Down Windows</item>
        <item>Roll Up Windows</item>
    </string-array>
    <string name="do_string">Do</string>
    <string name="action_string">action</string>
    <string name="title_activity_graph_activity">graph_activity</string>
    <string name="permission_string">PERMISSION 1</string>
    <string name="title_activity_rules">rules</string>
    <string name="add_rule_string">Add Rule</string>
</resources>
