<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="2dp"
    android:paddingEnd="2dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/if_string"
            android:id="@+id/textView3"
            android:layout_weight="0.075"
            android:textAlignment="gravity"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/condition_string"
            android:id="@+id/condition"
            android:gravity="center_vertical|center_horizontal"
            android:layout_weight="0.41"
            android:layout_gravity="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/do_string"
            android:id="@+id/textView5"
            android:layout_weight="0.075"
            android:textAlignment="gravity"
            android:layout_gravity="center"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/action_string"
            android:id="@+id/action"
            android:gravity="center_vertical|center_horizontal"
            android:enabled="false"
            android:singleLine="false"
            android:layout_weight="0.41"
            android:layout_gravity="center" />
    </LinearLayout>
</LinearLayout>