    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="qualcar.com.qualcar.view.rulesFragment">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/if_string"
                android:id="@+id/textView4"
                android:layout_weight="0" />

            <ExpandableListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expandableListView"
                android:layout_weight="40"
                android:choiceMode="multipleChoice"
                android:fastScrollEnabled="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/do_string"
                android:id="@+id/textView6"
                android:layout_weight="0" />

            <ExpandableListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/expandableListView2"
                android:layout_weight="40"
                android:choiceMode="multipleChoice"
                android:fastScrollEnabled="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView2" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/listView3" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_rule_string"
            android:id="@+id/button" />

    </LinearLayout>